--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -31,5 +31,17 @@
 	</dependencies>
 	<build>
 		<finalName>Studiduell</finalName>
+		<plugins>
+		    <!-- explicitly support Java 7 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
