Server: Refactoring and implemented Register.

--- a/Backend/src/main/webapp/WEB-INF/studiduell.properties
+++ b/Backend/src/main/webapp/WEB-INF/studiduell.properties
@@ -1,5 +1,6 @@
-sql.insertUser=INSERT INTO Benutzer VALUES (?, ?, null, ?)
-sql.selectCategory=SELECT * FROM Kategorie
-sql.insertCategoryFilter=INSERT INTO Kategorienfilter VALUES (?, ?, true)
+project.name=Studiduell
+
+sql.hql.selectCategory=FROM KategorieEntity
+#sql.selectPassword=SELECT passwort_hash FROM Benutzer WHERE benutzername = ?
 
 crypto.algorithm=SHA-512
