--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -55,11 +55,12 @@
 			<version>4.3.0.Final</version>
 		</dependency>
 		<!-- JSON API -->
+		<!-- <dependency> <groupId>net.sf.json-lib</groupId> <artifactId>json-lib</artifactId> 
+			<version>2.4</version> <classifier>jdk15</classifier> </dependency> -->
 		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.4</version>
-			<classifier>jdk15</classifier>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20131018</version>
 		</dependency>
 	</dependencies>
 	<build>
