Server: create_game-Vorarbeit...
JPQL für create game mit zufälligem Gegner erstellt.

--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -1,3 +1,9 @@
 project.name=Studiduell
 
 user.search.maxSearchableUsers=10
+
+# 4 means WEEK-OF-MONTH
+game.calendar.userActivityTimeout.field=4
+game.calendar.userActivityTimeout.offset=-2
+
+game.maxRounds=6
