--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -7,3 +7,6 @@ game.calendar.userActivityTimeout.field=4
 game.calendar.userActivityTimeout.offset=-2
 
 game.maxRounds=6
+
+ajax.accessControlAllowOriginKey=Access-Control-Allow-Origin
+ajax.accessControlAllowOriginValue=*
