Server: Added CORS support, Web Filter on OPTIONS.
This allows to create a connection from the app to the server using
Spring Security and CORS.

--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -8,5 +8,5 @@ game.calendar.userActivityTimeout.offset=-2
 
 game.maxRounds=6
 
-ajax.accessControlAllowOriginKey=Access-Control-Allow-Origin
-ajax.accessControlAllowOriginValue=*
+ajax.cors.accessControlAllowOriginKey=Access-Control-Allow-Origin
+ajax.cors.accessControlAllowOriginValue=*
