--- a/Backend/src/main/webapp/WEB-INF/web.xml
+++ b/Backend/src/main/webapp/WEB-INF/web.xml
@@ -16,11 +16,11 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter>
-		<filter-name>cors</filter-name>
-		<filter-class>studiduell.security.CorsFilter</filter-class>
+		<filter-name>CORSFilter</filter-name>
+		<filter-class>studiduell.servletFilter.CorsFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>cors</filter-name>
+		<filter-name>CORSFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<context-param>
