Server: Merge conflicts behoben. (randomCategories)

--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -6,7 +6,9 @@ user.search.maxSearchableUsers=10
 game.calendar.userActivityTimeout.field=4
 game.calendar.userActivityTimeout.offset=-2
 
+game.questionsPerRound=3
 game.maxRounds=6
+game.suggestedCategoriesCount=3
 
 ajax.cors.accessControlAllowOriginKey=Access-Control-Allow-Origin
 ajax.cors.accessControlAllowOriginValue=*
