Server: sync also sends 5 last closed/abandoned games + FIXED bug in sync hqls.

--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -1,6 +1,9 @@
 project.name=Studiduell
 
+# the maximum amount of users that are displayed in a search
 user.search.maxSearchableUsers=10
+# the maximum of history of ended games that are synced with the client, too
+user.search.maxEndedGames=5
 
 # 4 means WEEK-OF-MONTH
 game.calendar.userActivityTimeout.field=4
