Server: [#46] Fixed: Name only alphanumeric characters.

--- a/Backend/src/main/resources/studiduell.properties
+++ b/Backend/src/main/resources/studiduell.properties
@@ -1,5 +1,8 @@
 project.name=Studiduell
 
+# the allowed tokens for a username
+user.name.conventionsRegex=[0-9A-Za-z]*
+
 # the maximum amount of users that are displayed in a search
 user.search.maxSearchableUsers=10
 # the maximum of history of ended games that are synced with the client, too
